# ab-benchmark

./: .gitignore  README.md  pyproject.toml
ab_benchmark/: __init__.py  schema.py  seqprops.py
ab_benchmark/baselines/: __init__.py  base.py  biophi.py  cabs_flex.py  camsol.py  developability_index.py  dynamine.py  prophet_ab.py  run_all.py  tap.py
ab_benchmark/data/: __init__.py  build_harmonized.py  harmonize.py  loaders.py
ab_benchmark/eval/: __init__.py  bootstrap.py  splits.py
configs/: datasets.yaml
scripts/: compute_baseline_correlations.py
tests/: test_baselines_camsol.py  test_baselines_tap_di.py  test_baselines_wrappers.py  test_eval.py  test_harmonize.py  test_loaders.py  test_schema.py  test_seqprops.py
