[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-benchmark"
version = "0.1.0"
description = "Shared antibody developability benchmark: harmonized datasets, structure-aware baselines (TAP/DI/CamSol/BioPhi/DynaMine/CABS-flex/PROPHET-Ab), leakage-resistant grouped CV, bootstrap confidence intervals."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Di Wu" }]
keywords = ["antibody", "developability", "benchmark", "biologics", "machine-learning"]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "biopython>=1.81",
  "pyyaml>=6.0",
  "pyarrow>=14.0",
]

[project.optional-dependencies]
numbering = ["anarci>=2021.02.04"]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.1.0",
]
notebooks = [
  "jupyter>=1.0",
  "matplotlib>=3.7",
  "seaborn>=0.12",
]

[tool.setuptools.packages.find]
include = ["ab_benchmark*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
markers = [
  "slow: marks tests as slow (deselect with -m 'not slow')",
  "integration: marks integration tests requiring external data",
]

[tool.ruff]
line-length = 100
target-version = "py310"
